update with parametrized presentation

--- a/MessingAroundMarkup.html
+++ b/MessingAroundMarkup.html
@@ -108,7 +108,9 @@
 
 <p>\[
 x^2
-\]</p>
+\] So if x was 10 and the index was 5 then</p>
+
+<pre >## [1] 1e+05</pre>
 
 </article></slide><slide class=''><hgroup><h2></h2></hgroup><article >
 
@@ -139,10 +141,8 @@ x^2
 
 </article></slide><slide class=''><hgroup><h2>Including digrams with DiagrammeR</h2></hgroup><article  id="including-digrams-with-diagrammer">
 
-<pre >## Warning: package &#39;DiagrammeR&#39; was built under R version 3.3.3</pre>
-
-<div id="htmlwidget-b920391ce13fb1572f92" style="width:720px;height:432px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-b920391ce13fb1572f92">{"x":{"diagram":"\n  digraph {\n     #layout = twopi\n   node [shape = circle]\n     S -> I -> R\n   }","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script></article></slide>
+<div id="htmlwidget-b9b260db995be9ef0cac" style="width:720px;height:432px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b9b260db995be9ef0cac">{"x":{"diagram":"\n  digraph {\n     #layout = twopi\n   node [shape = circle]\n     S -> I -> R\n   }","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script></article></slide>
 
 
   <slide class="backdrop"></slide>
